load profile picture

--- a/frontend/profilePage.html
+++ b/frontend/profilePage.html
@@ -90,7 +90,7 @@
                                 <div class="font-weight-bolder" style="padding-bottom: 6%; font-size: 24pt;" id="accountType"> 
                                     Account Type
                                 </div>
-                                <img src="sisman.png" class="rounded-circle circle-button" style="height: 200px; width: 200px;" id="profilePicture">
+                                <img src="" class="rounded-circle circle-button" style="height: 200px; width: 200px;" id="profilePicture">
                                 <input type="file" class="form-control-file" id="pictureUpload">
                             </div>
                             <div class="lead">
