--- a/frontend/listing_search.html
+++ b/frontend/listing_search.html
@@ -105,7 +105,7 @@
         <form class="example" id = "searchbar">
           <div class="col-md-8">
             <input type="text" placeholder="Address, Neighborhood, City, or ZipCode" id="search" class="border font-weight-light">
-            <button type="submit" class="submit bg-dark" style=""><i class="fa fa-search" style="color:white;"></i></button>
+            <button id="trySearch" class="submit bg-dark" style=""><i class="fa fa-search" style="color:white;"></i></button>
           </div> 
         </form>
       </div>
