--- a/frontend/listing_search.html
+++ b/frontend/listing_search.html
@@ -115,11 +115,12 @@
           <span class="sr-only">Toggle Dropdown</span>
         </button>
         <div class="dropdown-menu" id="dmenuprice">
-          <a class="dropdown-item" href="#" id = "priceany">Any</a>
+          <a class="dropdown-item active" href="#" id = "priceany">Any</a>
           <a class="dropdown-item" href="#" id = "price0500">$0-$500</a>
           <a class="dropdown-item" href="#" id = "price5001000">$500-$1000</a>
           <!--need to add class names to input types or maybe not, idk in order to get values-->
-          <a class="dropdown-item" href="#" id = "pricecustom"><input type ="text" placeholder="$" style="width:45%">-<input type ="text" placeholder="$" style="width:50%"></a>
+          <a class="dropdown-item" href="#" id = "pricecustom"><input type ="text" placeholder="$" style="width:45%" id = "leftp">-<input type ="text" placeholder="$" style="width:50%"
+            id = "rightp"></a>
         </div>
       </div>
 
@@ -131,7 +132,7 @@
           <div class = "container-fluid">
             Bedrooms
             <div class="btn-group" id = "dmenubed">
-              <a class="dropdown-item border rounded" href="#" id = "bedany">Any</a>
+              <a class="dropdown-item border rounded active" href="#" id = "bedany">Any</a>
               <a class="dropdown-item border rounded" href="#" id = "bed1">1+</a>
               <a class="dropdown-item border rounded" href="#" id = "bed2">2+</a>
               <a class="dropdown-item border rounded" href="#" id = "bed3">3+</a>
@@ -142,7 +143,7 @@
           <div class = "container-fluid">
             Bathrooms
             <div class="btn-group" id = "dmenubath">
-              <a class="dropdown-item border rounded" href="#" id = "bathany">Any</a>
+              <a class="dropdown-item border rounded active" href="#" id = "bathany">Any</a>
               <a class="dropdown-item border rounded" href="#" id = "bath1">1+</a>
               <a class="dropdown-item border rounded" href="#" id = "bath2">2+</a>
               <a class="dropdown-item border rounded" href="#" id = "bath3">3+</a>
@@ -214,7 +215,7 @@
         <div class="dropdown-menu" id= "dmenusort">
         <a class="dropdown-item" href="#" id="sortplh">Price (lowest to highest)</a>
         <a class="dropdown-item" href="#" id="sortphl">Price (highest to lowest)</a>
-        <a class="dropdown-item" href="#" id = "sortnew">Newest</a>
+        <a class="dropdown-item active" href="#" id = "sortnew">Newest</a>
         <a class="dropdown-item" href="#" id = "sortold">Oldest</a>
         <a class="dropdown-item" href="#" id = "sortsqft">Square Feet</a>
         </div>
