--- a/frontend/listing_search.html
+++ b/frontend/listing_search.html
@@ -242,12 +242,12 @@
         
     <br>
     <div class="d-flex justify-content-center" >
-      <ul class="pagination">
-        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+      <ul class="pagination" id = "whichpage">
+        <li class="page-item"><a class="page-link" href="#" id = "pageprev">Previous</a></li>
+        <li class="page-item active"><a class="page-link" href="#" id="page1">1</a></li>
+        <li class="page-item"><a class="page-link" href="#" id = "page2">2</a></li>
+        <li class="page-item"><a class="page-link" href="#" id = "page3">3</a></li>
+        <li class="page-item"><a class="page-link" href="#" id = "pagenext">Next</a></li>
       </ul>
     </div>
   </body>
