create new directory for user pfp if not exist

--- a/frontend/profilePage.html
+++ b/frontend/profilePage.html
@@ -93,6 +93,7 @@
                                 <img src="" class="rounded-circle circle-button" style="height: 200px; width: 200px;" id="profilePicture">
                                 <input type="file" class="form-control-file" id="pictureUpload">
                                 <button class="btn rounded btn-primary" id="changeProfilePic">Change Profile Picture</button>
+                                <div style="color: red" id="picReq"></div>
                             </div>
                             <div class="lead">
                                 Name:
