before merge commit

--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -94,7 +94,7 @@
         <div class="centered">Tri-lo</div>
         <form class="form-inline">
           <div class="input-group">
-            <input type="email" class="form-control" size="50" placeholder="Address, Neighborhood, City, or ZipCode" required id="searchInput">
+            <input type="text" class="form-control" size="50" placeholder="Address, Neighborhood, City, or ZipCode" required id="searchInput">
             <div class="input-group-btn">
               <button type="button" class="btn btn-dark" id="search" style="font-size: 2pt;"><i class="material-icons"> search </i></button>
             </div>
