setting up front end for query

--- a/frontend/listing_search.html
+++ b/frontend/listing_search.html
@@ -224,12 +224,20 @@
               </div>
               <div class="container" style="margin-left: 2%;">
                 <div class="lead" style="margin-bottom: 1%;">Parking</div>
-                <div class="form-group row" aria-labelledby="2to1" style="margin-left: 2%;">
-                  <div class="custom-control custom-checkbox" id ="parkingC">
-                    <input type="checkbox" class="custom-control-input" id="parking">
-                    <label class="custom-control-label" for="parking">Has Parking</label>
+                  <div class="form-group row" aria-labelledby="2to1" style="margin-left: 2%;">
+                    <div class="custom-control custom-checkbox" id ="parkingG" style="margin-right: 2%;">
+                      <input type="checkbox" class="custom-control-input" id="parkingGarage">
+                    <label class="custom-control-label" for="parking">Garage</label>
+                    </div>
+                    <div class="custom-control custom-checkbox" id ="parkingO" style="margin-right: 2%;">
+                      <input type="checkbox" class="custom-control-input" id="parkingOffStreet">
+                    <label class="custom-control-label" for="parking">Off-Street</label>
+                    </div>
+                    <div class="custom-control custom-checkbox" id ="parkingC" style="margin-right: 2%;">
+                      <input type="checkbox" class="custom-control-input" id="parkingCovered">
+                    <label class="custom-control-label" for="parking">Covered</label>
+                    </div>
                   </div>
-                </div>
               </div>
               <div class="container" style="margin-left: 2%;">
                 <div class="lead" style="margin-bottom: 1%;">Appliance</div>
