--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -15,6 +15,7 @@
     <script src="js/homepageScripts.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/instantiateUser.js"></script>
+    <script src="js/listingSearchScript.js"></script>
 
     <title>Tri-lo</title>
     <style>
@@ -94,11 +95,7 @@
         <div class="centered">Tri-lo</div>
         <form class="form-inline" onsubmit="location.href = 'listing_search.html?search=' + document.getElementById('searchInput').value; return false;">
           <div class="input-group">
-<<<<<<< HEAD
             <input type="text" class="form-control" size="50" placeholder="Address, Neighborhood, City, or ZipCode" required id="searchInput">
-=======
-            <input type="text" class="form-control" size="50" placeholder="Address, Neighborhood, City, or ZipCode" id="searchInput">
->>>>>>> origin/master
             <div class="input-group-btn">
               <button type="button" class="btn btn-dark" id="search" style="font-size: 2pt;"><i class="material-icons"> search </i></button>
             </div>
