--- a/frontend/listing_search.html
+++ b/frontend/listing_search.html
@@ -126,8 +126,8 @@
           <a class="dropdown-item" href="#" id = "price0500">$0-$500</a>
           <a class="dropdown-item" href="#" id = "price5001000">$500-$1000</a>
           <!--need to add class names to input types or maybe not, idk in order to get values-->
-          <a class="dropdown-item" href="#" id = "pricecustom"><input type ="text" placeholder="$" style="width:45%" id = "leftp">-<input type ="text" placeholder="$" style="width:50%"
-            id = "rightp"></a>
+          <a class="dropdown-item" href="#" id = "pricecustom"><input type ="text" placeholder="$" style="width:45%" id = "customMin">-<input type ="text" placeholder="$" style="width:50%"
+            id = "customMax"></a>
         </div>
       </div>
 
