--- a/frontend/exlistpage.html
+++ b/frontend/exlistpage.html
@@ -72,7 +72,7 @@
             <button class="btn border col-md-3"><img src="https://rpiathletics.com/images/2020/6/30/Campus.jpg?width=1920&quality=80&format=jpg" style="width:100%; float:left;" id = "img2"></button>
         </div>
         </div>
-        <div class = "container-fluid col-md-3 float-left"> 
+        <div class = "container-fluid col-md-6 float-left"> 
 
         <div id="waddr"style="margin-top:15px;">
         <div style="font-weight:bold; float:left;">
@@ -131,30 +131,8 @@
         </div>
 
         </div> <!--end of right side of image-->
-
-        <!--yes-->
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>    
-        <br>
     
-
+        <div class="col-md-12 float-left">
         <div id="ldesc" style="margin-top: 15px;">
         <div style="font-weight:bold;">
             Listing Description:&nbsp;
@@ -174,6 +152,7 @@
         </div>
         
 
+        </div>
         </div>
     </div>
     </body>
