--- a/frontend/exlistpage.html
+++ b/frontend/exlistpage.html
@@ -44,13 +44,7 @@
 
         <div class="col-md-6 float-left">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="https://i.imgur.com/S7cTEgw.png" alt="First slide" id = "im1">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="https://rpiathletics.com/images/2020/6/30/Campus.jpg?width=1920&quality=80&format=jpg" alt="Second slide" id = "im2">
-                </div>
+            <div class="carousel-inner" id="carousel-container">
             </div>
 
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
