--- a/frontend/bookmarkedListings.html
+++ b/frontend/bookmarkedListings.html
@@ -78,6 +78,9 @@
                           <a class="nav-link" href="group.html">Group</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#">Invites</a>
+                        </li>
+                        <li class="nav-item">
                           <a class="nav-link active" href="#">Bookmarked Listings</a>
                         </li>
                       </ul>
