--- a/frontend/invites.html
+++ b/frontend/invites.html
@@ -14,7 +14,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         
         <script src="js/scripts.js"></script>
-        <script src="js/group.js"></script>
+        <script src="js/invites.js"></script>
         <script src="js/instantiateUser.js"></script>
 
         <title>Tri-lo</title>
@@ -76,10 +76,10 @@
                             <a class="nav-link" href="profilePage.html">Account Settings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Groups</a>
+                            <a class="nav-link" href="#">Groups</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Invites</a>
+                            <a class="nav-link active" href="#">Invites</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="bookmarkedListings.html">Bookmarked Listings</a>
