--- a/frontend/profilePage.html
+++ b/frontend/profilePage.html
@@ -79,6 +79,9 @@
                           <a class="nav-link" href="group.html">Group</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#">Invites</a>
+                        </li>
+                        <li class="nav-item">
                           <a class="nav-link" href="bookmarkedListings.html">Bookmarked Listings</a>
                         </li>
                       </ul>
