--- a/frontend/bookmarkedListings.html
+++ b/frontend/bookmarkedListings.html
@@ -78,7 +78,7 @@
                           <a class="nav-link" href="group.html">Group</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Invites</a>
+                            <a class="nav-link" href="invites.html">Invites</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link active" href="#">Bookmarked Listings</a>
