--- a/frontend/group.html
+++ b/frontend/group.html
@@ -79,7 +79,7 @@
                             <a class="nav-link active" href="#">Groups</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Invites</a>
+                            <a class="nav-link" href="invites.html">Invites</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="bookmarkedListings.html">Bookmarked Listings</a>
@@ -89,8 +89,9 @@
 
                 <!-- <div id="allGroups" styple="width:100%">
                 </div> -->
-
-                <div class="row" id = "allGroups">
+                <div class="col-sm-9">
+                    <div id = "allGroups" style="padding-right: 2%">
+                    </div>
                 </div>
             </div>
         </div>
