--- a/frontend/invites.html
+++ b/frontend/invites.html
@@ -76,7 +76,7 @@
                             <a class="nav-link" href="profilePage.html">Account Settings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Groups</a>
+                            <a class="nav-link" href="group.html">Groups</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="#">Invites</a>
