--- a/frontend/invites.html
+++ b/frontend/invites.html
@@ -90,7 +90,9 @@
                 <!-- <div id="allGroups" styple="width:100%">
                 </div> -->
 
-                <div class="row" id = "allGroups">
+                <div class="col-sm-9">
+                    <div id = "allGroups">
+                    </div>
                 </div>
             </div>
         </div>
