--- a/frontend/group.html
+++ b/frontend/group.html
@@ -90,7 +90,8 @@
                 <!-- <div id="allGroups" styple="width:100%">
                 </div> -->
                 <div class="col-sm-9">
-                    <div id = "allGroups" style="padding-right: 2%">
+                    <button class="btn btn-primary" id="createBtn" style="margin-bottom: 2%;"> Create Group</button>
+                    <div id = "allGroups">
                     </div>
                 </div>
             </div>
