--- a/frontend/exlistpage.html
+++ b/frontend/exlistpage.html
@@ -14,6 +14,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         <script src="js/scripts.js"></script>
         <script src="js/exlistpageScript.js"></script>
+        <script src="js/instantiateUser.js"></script>
         <title>empac</title>
         <style>
             body {
@@ -26,18 +27,20 @@
             }
         </style>
     </head>
-    <body onload="setEventListeners(); initMeme(); setListingEventListeners();">
+    <body onload="setEventListeners(); tryLogIn(); initMeme(); setListingEventListeners();">
     <nav class="navbar navbar-expand fixed-top lg navbar-dark">
         <a class="navbar-brand" href="#">Tri-lo</a>
         <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto" id="home">
-              <li class="nav-item" >
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#" id="home">Home <span class="sr-only">(current)</span></a>
               </li>
             </ul>
         </div>
-        <div class="navbar-nav mr-auto" id= "login">
-            <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%);">login</span>Login <span class="sr-only">(current)</span></a>
+        <div id="rightNavButton">
+            <div class="navbar-nav mr-auto" id= "login">
+                <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%);">login</span>Login <span class="sr-only">(current)</span></a>
+            </div>
         </div>
     </nav>
     <div class="container-fluid col-md-9" style= "margin-top: 15px;">
