--- a/frontend/listing_search.html
+++ b/frontend/listing_search.html
@@ -17,6 +17,8 @@
     
     <script src="js/listingSearchScript.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/instantiateUser.js"></script>
+
     <title>Search</title>
     <style>
         body {
@@ -92,20 +94,22 @@
     </style>
   </head>
 
-  <body onload="setEventListeners(); setListingSearchEventListeners();">
+  <body onload="setEventListeners(); tryLogIn(); setListingSearchEventListeners();">
     <nav class="navbar navbar-expand fixed-top lg navbar-dark">
-        <a class="navbar-brand" href="#">Tri-lo</a>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto" id="home">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-            </ul>
-        </div>
-        <div class="navbar-nav active" id="login">
-            <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%);">login</span>Login <span class="sr-only">(current)</span></a>
-        </div>
-    </nav>
+      <a class="navbar-brand" href="#">Tri-lo</a>
+      <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#" id="home">Home <span class="sr-only">(current)</span></a>
+            </li>
+          </ul>
+      </div>
+      <div id="rightNavButton">
+          <div class="navbar-nav mr-auto" id= "login">
+              <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%);">login</span>Login <span class="sr-only">(current)</span></a>
+          </div>
+      </div>
+  </nav>
     
     <div class = "container-fluid" style="padding-top: 10px;">
       <div class="first-bar">
