--- a/frontend/bookmarkedListings.html
+++ b/frontend/bookmarkedListings.html
@@ -50,7 +50,7 @@
             }
         </style>
     </head>
-
+    <body onload="setEventListeners(); doOnLoad();">
     <nav class="navbar navbar-expand fixed-top lg navbar-dark">
         <a class="navbar-brand" href="#">Tri-lo</a>
         <div class="collapse navbar-collapse" id="navbarText">
@@ -66,7 +66,6 @@
             </div>
         </div>
     </nav>
-    <body onload="doOnLoad()">
         <div class="container-fluid" style="margin-top: 2%;">
             <div class="row">
                 <div class="col-md-2" style="border-right: 1px solid #333;margin-right: 1%; padding:0">
