--- a/frontend/group.html
+++ b/frontend/group.html
@@ -90,7 +90,36 @@
                 <!-- <div id="allGroups" styple="width:100%">
                 </div> -->
                 <div class="col-sm-9">
-                    <button class="btn btn-primary" id="createBtn" style="margin-bottom: 2%;"> Create Group</button>
+                    <button class="btn btn-primary" id="createBtn" data-toggle="modal" data-target="#myModal" style="margin-bottom: 2%;"> Create Group</button>
+
+                    <!-- Modal -->
+                    <div id="myModal" class="modal" role="dialog">
+                    <div class="modal-dialog">
+
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Create Group</h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <label for="lname" style="width:100%; padding-bottom: 5px;">Group Name:
+                                <input id="groupName" type="text" style="width: 100%;"></input>
+                            </label>
+                            <label for="lname" style="width:100%; padding-bottom: 5px;">Group Description:
+                                <textarea id="groupDescription"style="width: 100%; height: 100px;"></textarea>
+                            </label>
+                            <div style="color: red" id="createReq"></div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary" onclick="createGroup()">Submit</button>
+                        </div>
+                        </div>
+
+                    </div>
+                    </div>
+
                     <div id = "allGroups">
                     </div>
                 </div>
