added create listing button to navbar

--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -83,9 +83,12 @@
               </li>
             </ul>
         </div>
+        <div class="navbar-nav mr-auto" id="createListing">
+          <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%); ;"></span>Create Listing <span class="sr-only">(current)</span></a>
+        </div>
         <div id="rightNavButton">
           <div class="navbar-nav mr-auto" id= "login">
-              <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%);">login</span>Login <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%);"></span>Login <span class="sr-only">(current)</span></a>
           </div>
         </div>
       </nav>
