--- a/frontend/listing_create.html
+++ b/frontend/listing_create.html
@@ -30,13 +30,18 @@
         <a class="navbar-brand" href="#">Tri-lo</a>
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto" id="home">
-              <li class="nav-item">
+              <li class="nav-item" >
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
               </li>
             </ul>
         </div>
-        <div class="navbar-nav mr-auto active" id= "login">
-            <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%);">login</span>Login <span class="sr-only">(current)</span></a>
+        <div class="navbar-nav mr-auto" id="createListing">
+          <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%); ;"></span>Create Listing <span class="sr-only">(current)</span></a>
+        </div>
+        <div id="rightNavButton">
+          <div class="navbar-nav mr-auto" id= "login">
+              <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%);"></span>Login <span class="sr-only">(current)</span></a>
+          </div>
         </div>
     </nav>
 
