--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -66,8 +66,13 @@
                   </li>
                 </ul>
             </div>
-            <div class="navbar-nav mr-auto active" id= "login">
-                <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%);">login</span>Login <span class="sr-only">(current)</span></a>
+            <div class="navbar-nav mr-auto" id="createListing">
+              <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%); ;"></span>Create Listing <span class="sr-only">(current)</span></a>
+            </div>
+            <div id="rightNavButton">
+              <div class="navbar-nav mr-auto" id= "login">
+                  <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%);"></span>Login <span class="sr-only">(current)</span></a>
+              </div>
             </div>
         </nav>
         <div class="card mb-3 col-auto centered" style="position: absolute; width: 28%; left:35%; margin-top: 5%; padding-left: 2%; padding-right: 2%; padding-bottom: 1%;">
